--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "webpack-cli": "^3.3.11"
   },
   "dependencies": {
-    "lodash": "^4.17.15"
+    "css-loader": "^3.6.0",
+    "file-loader": "^6.0.0",
+    "lodash": "^4.17.15",
+    "style-loader": "^1.2.1"
   }
 }
