--- a/package.json
+++ b/package.json
@@ -17,13 +17,14 @@
   },
   "homepage": "https://github.com/khomavolha/forte1_webpackConfig#readme",
   "devDependencies": {
+    "clean-webpack-plugin": "^3.0.0",
+    "css-loader": "^3.6.0",
+    "file-loader": "^6.0.0",
+    "html-webpack-plugin": "^4.3.0",
+    "lodash": "^4.17.15",
+    "style-loader": "^1.2.1",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11"
   },
-  "dependencies": {
-    "css-loader": "^3.6.0",
-    "file-loader": "^6.0.0",
-    "lodash": "^4.17.15",
-    "style-loader": "^1.2.1"
-  }
+  "dependencies": {}
 }
