--- a/my-app/package.json
+++ b/my-app/package.json
@@ -7,9 +7,11 @@
       "@testing-library/react": "^9.5.0",
       "@testing-library/user-event": "^7.2.1",
       "node-sass": "^4.14.1",
+      "normalize.css": "^8.0.1",
       "react": "^16.13.1",
       "react-dom": "^16.13.1",
       "react-scripts": "3.4.1",
+      "sanitize.css": "^11.0.1",
       "styled-components": "^5.1.1"
    },
    "scripts": {
@@ -42,6 +44,7 @@
       "eslint-plugin-prettier": "^3.1.4",
       "eslint-plugin-react": "^7.20.0",
       "eslint-plugin-react-hooks": "^4.0.4",
+      "postcss-normalize": "^9.0.0",
       "prettier": "^2.0.5"
    },
    "resolutions": {
